--- a/_scss/_media.scss
+++ b/_scss/_media.scss
@@ -19,6 +19,12 @@
     .logo {
       margin-bottom: 12px;
 
+      .mark {
+        svg {
+          margin: 0 auto !important;
+        }
+      }
+
       .nav-logo {
         font-size: 1.1rem !important;
       }
@@ -67,7 +73,7 @@
 
   footer {
     height: 150px;
-    
+
     p {
       padding: 0 20px;
     }
