mobile nav spacing

--- a/_scss/_media.scss
+++ b/_scss/_media.scss
@@ -14,7 +14,7 @@
   .nav {
     padding-left: 0 !important;
     padding-right: 0 !important;
-    margin: 12px 0 20px !important;
+    margin: 20px 0 !important;
 
     .logo {
       margin-bottom: 12px;
