small format tweaks and about picture

--- a/_scss/_media.scss
+++ b/_scss/_media.scss
@@ -19,13 +19,8 @@
     .logo {
       margin-bottom: 12px;
 
-      .mark {
-        svg {
-          margin: 0 auto !important;
-        }
-      }
-
-      .nav-logo {
+      .nav-tagline {
+        margin-top: 0 !important;
         font-size: 1.1rem !important;
       }
     }
