--- a/_scss/_typography.scss
+++ b/_scss/_typography.scss
@@ -91,7 +91,7 @@ a {
 nav {
   .nav {
     .logo {
-      .nav-logo {
+      .nav-tagline {
         color: $accent-color;
         font-family: $headline-fonts;
         font-size: 1.4rem;
