--- a/_scss/_layout.scss
+++ b/_scss/_layout.scss
@@ -221,11 +221,11 @@ footer {
 
   p {
     margin-top: 0;
-    padding: 0 10px;
+    padding: 0;
   }
 
   ul {
-    padding: 0 10px;
+    padding: 0;
     margin-bottom: 4px;
 
     li {
